--- a/addons_custom/theme_sme/static/less/base.less
+++ b/addons_custom/theme_sme/static/less/base.less
@@ -10,6 +10,8 @@ body {
   .font-regular;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 1.8rem;
+  line-height: 2.8rem;
 }
 
 .font(@font-family: Quicksand, "Trebuchet MS", Helvetica, sans-serif; 
@@ -31,4 +33,21 @@ body {
 
 .font-bold {
   .font(Quicksand, sans-serif; 700; normal);
+}
+
+h1, h2, h3, h4 {
+  .font-regular;
+}
+
+h1 {
+  font-size: 5.6rem;
+}
+
+h2 {
+  font-size: 4rem;
+}
+
+p {
+  font-size: 1.8rem;
+  line-height: 2.8rem;
 }
