--- a/addons_custom/theme_sme/static/less/layout.less
+++ b/addons_custom/theme_sme/static/less/layout.less
@@ -1,19 +1,23 @@
-@logo-animation-speed: 300ms;
+@logo-animation-speed: 400ms;
 
 header {
   .custom-nav {
     width: 100%;
   }
 
+  .navbar-brand {
+    padding-top: 5px;
+  }
+
   a.navbar-brand {
     position: relative;
-    width: 160px;
+    width: 200px;
   }
 
   a.navbar-brand .header-logo {
     position: absolute;
+    width: 140px;
     max-height: 400px;
-    width: 100%;
     -webkit-transition: all @logo-animation-speed cubic-bezier(0.17, 0.04, 0.03, 0.94);
     -moz-transition: all @logo-animation-speed cubic-bezier(0.17, 0.04, 0.03, 0.94);
     transition: all @logo-animation-speed cubic-bezier(0.17, 0.04, 0.03, 0.94);
@@ -37,17 +41,17 @@ header {
     transition: all @logo-animation-speed cubic-bezier(0.17, 0.04, 0.03, 0.94);
   }
 
-  .affix {
+  .affix.scrolled {
     .header-logo {
-      -webkit-transform:translateY(-170px);
-      -moz-transform:translateY(-170px);
-      transform:translateY(-170px);
+      -webkit-transform:translateY(-200px);
+      -moz-transform:translateY(-200px);
+      transform:translateY(-200px);
     }
 
     .header-logo-script {
       display: block;
       opacity: 1;
-      top: 25px;
+      top: 20px;
     }
 
     .navbar-nav > li > a {
