--- a/addons_custom/theme_sme/static/less/home.less
+++ b/addons_custom/theme_sme/static/less/home.less
@@ -14,6 +14,12 @@
 
 .video-header-copy {
   text-align: center;
+
+}
+
+.video-header-copy-box {
+  border: 2px solid white;
+  padding: 24px 0;
 }
 
 .header-subtitle {
