--- a/addons_custom/theme_sme/static/less/layout.less
+++ b/addons_custom/theme_sme/static/less/layout.less
@@ -80,3 +80,52 @@ header {
     background-color: white;
   }
 }
+
+#footer {
+  background-color: @dark-grey;
+  padding-top: 50px;
+}
+
+.footer-social {
+  padding-top: 75px;
+  a {
+    height: 45px;
+    width: 45px;
+    text-align: center;
+    display: inline-block;
+    border-radius: 50px;
+    background-color: @bright;
+    opacity: 0.8;
+    color: @dark-grey;
+    padding-top: 5px;
+  }
+}
+
+.footer-logo img {
+  width: 200px;
+  margin: 0 auto;
+}
+
+.footer-links {
+  padding-top: 50px;
+  ul {
+    margin: 0 auto;
+  }
+
+  li {
+    list-style: none;
+  }
+
+  a,
+  a:hover {
+    font-size: 2.4rem;
+    color: @bright;
+  }
+}
+
+.footer-bottom {
+  margin-top: 50px;
+  padding: 15px 0;
+  border-top: 1px solid @light-grey;
+  color: @bright;
+}
