--- a/addons_custom/theme_sme/views/assets.xml
+++ b/addons_custom/theme_sme/views/assets.xml
@@ -9,12 +9,15 @@
       <link href="/theme_sme/static/less/layout.less" rel="stylesheet" type="text/less"/>
       <link href="/theme_sme/static/less/base.less" rel="stylesheet" type="text/less"/>
       <link href="/theme_sme/static/less/home.less" rel="stylesheet" type="text/less"/>
+      <link href="/theme_sme/static/less/snippets.less" rel="stylesheet" type="text/less"/>
+      <link href="/theme_sme/static/less/contact.less" rel="stylesheet" type="text/less"/>
     </xpath>
   </template>
 
   <template id="sme_frontend_js" inherit_id="website.assets_frontend" priority="900">
     <xpath expr="//link[last()]" position="after">
       <script type="text/javascript" src="/theme_sme/static/js/main.js"/>
+      <script type="text/javascript" src="/theme_sme/static/js/masonry.js"/>
     </xpath>
   </template>
 
